bin/testsuite/tests/compiler/src/errors/compiler10.swg
#global testerror "Err0300";
0x111_
